--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wikipedia/dump/wikiextractor"]
 	path = wikipedia/dump/wikiextractor
 	url = https://github.com/panx27/wikiextractor.git
+[submodule "wikipedia/dump/common/wikiextractor"]
+	path = wikipedia/dump/common/wikiextractor
+	url = https://github.com/attardi/wikiextractor/
